# esp8266

./: .envrc  .gitignore  README.md  pyproject.toml  setup.sh
dht-22/: CMakeLists.txt  Makefile  README.md
dht-22/main/: main.c
hello-world/: CMakeLists.txt  Makefile  README.md
hello-world/main/: main.c
shell/: CMakeLists.txt  Makefile  README.md
shell/components/cmd_system/: cmd_system.c  cmd_system.h
shell/main/: CMakeLists.txt  cmd_decl.h  cmd_wifi.c  cmd_wifi.h  shell.c
